--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,8 @@
 [build]
-  functions = "functions"
   command = "npm run build"
   publish = "build"
 
 [[redirects]]
-  from = "/"
+  from = "/*"
   to = "/index.html"
   status = 200
